@@ -347,9 +347,9 @@ gst_caps_unref (GstCaps * caps)
  *
  * Converts a #GstStaticCaps to a #GstCaps.
  *
- * Returns: A pointer to the #GstCaps. Although you do not have a reference on
- * the caps, the core will never drop its references. (The core has two
- * references on the caps so it will be immutable.)
+ * Returns: A pointer to the #GstCaps. Unref after usage. Since the
+ * core holds an additional ref to the returned caps, 
+ * use gst_caps_make_writable() on the returned caps to modify it.
  */
 GstCaps *
 gst_static_caps_get (GstStaticCaps * static_caps)
@@ -372,11 +372,9 @@ gst_static_caps_get (GstStaticCaps * static_caps)
     if (!ret) {
       g_critical ("Could not convert static caps \"%s\"", static_caps->string);
     }
-    /* and now that we return it to the user, keep a ref for ourselves. This
-     * makes the caps immutable... AND INVINCIBLE! WOULD YOU LIKE TO TRY MY
-     * IMMUTABLE CAPS STYLE? I AM A CAPS WARRIOR!!! */
-    gst_caps_ref (caps);
   }
+  /* ref the caps, makes it not writable */
+  gst_caps_ref (caps);
 
   return caps;
 }
